--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@modelcontextprotocol/server-everything": "^2025.7.1",
     "@modelcontextprotocol/server-puppeteer": "^2025.5.12",
+    "@next/swc-darwin-arm64": "^15.3.5",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
